Using PreAuthorize to simplify Controller